Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-58043

XDG environment variables with relative paths should be ignored

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P2: Important
    • 6.2.9, 6.5.0, 6.6.0
    • 5.5.1, 5.7.1
    • Core: I/O
    • None
    • Linux
    • d4f72b4de (dev), 80a6048ab (6.5), f020fa0e9 (6.4), c14ef6aad (tqtc/lts-6.2)

    Description

      XDG Base Directory Specification (https://specifications.freedesktop.org/basedir-spec/basedir-spec-0.8.html) says about $XDG_* variables:
      If an implementation encounters a relative path in any of these variables it should consider the path invalid and ignore it.

      But QStandardPaths::writableLocation uses values from XDG variables also when they contain relative paths.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            dfaure_kdab David Faure
            amorozov Alexander Morozov
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: