src/corelib/io/qstandardpaths_unix.cpp
@@ -185,6 +185,9 @@ QString QStandardPaths::writableLocation(StandardLocation type)
 
         // http://standards.freedesktop.org/basedir-spec/basedir-spec-0.6.html
         QString xdgCacheHome = QFile::decodeName(qgetenv("XDG_CACHE_HOME"));
+        if (!xdgCacheHome.startsWith(u'/'))
+            xdgCacheHome.clear(); // spec says relative paths should be ignored
+
         if (xdgCacheHome.isEmpty())
             xdgCacheHome = QDir::homePath() + "/.cache"_L1;
         if (type == QStandardPaths::CacheLocation)
@@ -199,6 +202,9 @@ QString QStandardPaths::writableLocation(StandardLocation type)
             return QDir::homePath() + "/.qttest/share"_L1;
 
         QString xdgDataHome = QFile::decodeName(qgetenv("XDG_DATA_HOME"));
+        if (!xdgDataHome.startsWith(u'/'))
+            xdgDataHome.clear(); // spec says relative paths should be ignored
+
         if (xdgDataHome.isEmpty())
             xdgDataHome = QDir::homePath() + "/.local/share"_L1;
         if (type == AppDataLocation || type == AppLocalDataLocation)
@@ -214,6 +220,9 @@ QString QStandardPaths::writableLocation(StandardLocation type)
 
         // http://standards.freedesktop.org/basedir-spec/latest/
         QString xdgConfigHome = QFile::decodeName(qgetenv("XDG_CONFIG_HOME"));
+        if (!xdgConfigHome.startsWith(u'/'))
+            xdgConfigHome.clear(); // spec says relative paths should be ignored
+
         if (xdgConfigHome.isEmpty())
             xdgConfigHome = QDir::homePath() + "/.config"_L1;
         if (type == AppConfigLocation)
@@ -223,6 +232,9 @@ QString QStandardPaths::writableLocation(StandardLocation type)
     case RuntimeLocation:
     {
         QString xdgRuntimeDir = QFile::decodeName(qgetenv("XDG_RUNTIME_DIR"));
+        if (!xdgRuntimeDir.startsWith(u'/'))
+            xdgRuntimeDir.clear(); // spec says relative paths should be ignored
+
         bool fromEnv = !xdgRuntimeDir.isEmpty();
         if (xdgRuntimeDir.isEmpty() || !checkXdgRuntimeDir(xdgRuntimeDir)) {
             // environment variable not set or is set to something unsuitable
@@ -249,6 +261,9 @@ QString QStandardPaths::writableLocation(StandardLocation type)
 #if QT_CONFIG(regularexpression)
     // http://www.freedesktop.org/wiki/Software/xdg-user-dirs
     QString xdgConfigHome = QFile::decodeName(qgetenv("XDG_CONFIG_HOME"));
+    if (!xdgConfigHome.startsWith(u'/'))
+        xdgConfigHome.clear(); // spec says relative paths should be ignored
+
     if (xdgConfigHome.isEmpty())
         xdgConfigHome = QDir::homePath() + "/.config"_L1;
     QFile file(xdgConfigHome + "/user-dirs.dirs"_L1);
@@ -361,13 +376,13 @@ static QStringList xdgDataDirs()
 
 static QStringList xdgConfigDirs()
 {
-    QStringList dirs;
     // http://standards.freedesktop.org/basedir-spec/latest/
     const QString xdgConfigDirs = QFile::decodeName(qgetenv("XDG_CONFIG_DIRS"));
-    if (xdgConfigDirs.isEmpty())
-        dirs.append(QString::fromLatin1("/etc/xdg"));
-    else
-        dirs = xdgConfigDirs.split(u':');
+
+    QStringList dirs = dirsList(xdgConfigDirs);
+    if (dirs.isEmpty())
+        dirs.push_back(u"/etc/xdg"_s);
+
     return dirs;
 }
 
